tests/negative/contexts/use_missing_context.orng
// use_missing_context.orng:10:16: error: missing context `My_Context`
//     My_Context.x
//               ^
// 
context My_Context {
    x: Int
}

fn main() -> Int {
    My_Context.x
}